# $Id$

2008-03-27	Konstantin V. Arkhipov

	* main/Net/Http/HeaderUtils.class.php: redirect() removed, finally.

2008-03-24	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: custom
	clean() implemented.

2008-03-07	Denis M. Gabaidulin

	* main/UnifiedContainer/UnifiedContainer.class.php: dropList()
	implemented.

2008-03-04	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php: PostgreSQL-8.3 doesn't like
	comparsion between integer and varchar, so dialect now quotes all
	integers by default; again.

2008-03-04	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotEmptyArray().

2008-02-29	Denis M. Gabaidulin

	* core/Cache/WatermarkedPeer.class.php: version duplication removed.

2008-02-28	Konstantin V. Arkhipov

	* 0.10.10 released.

2008-02-28	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: now works with
	unicode correctly; extra rules added: compress whitespaces,
	&nbsp; after short strings.

2008-02-19	Konstantin V. Arkhipov

	* meta/: syntax check replaced by class compiling.

2008-02-18	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: further collisions prevention:
	onPHP's version now appends to watermark.

2008-02-01	Ivan Y. Khvostishkov

	* main/Net/Mail/Mail.class.php: setSendmailArgs(): used for setting 5th
	argument for mail() function.

2008-01-21	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotFalse().

	* main/Utils/IO/FileOutputStream.class.php: now throws IOException,
	if stream file resource does not exist.

2008-01-21	Konstantin V. Arkhipov

	* 0.10.9 released.

2008-01-10	Konstantin V. Arkhipov

	* meta/: configurations without classes are now allowed;
	includes processing now goes before classes.

2008-01-08	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: validation against
	meta.dtd implemented.

	* core/Cache/FileLocker.class.php: added forgotten file dropping in
	drop().

2008-01-07	Konstantin V. Arkhipov
